2005-08-08  John McCutchan  <ttb@tentacle.dhs.org>

	* server/gam_inotify.c: (gam_inotify_event_pair_with),
	(gam_inotify_read_handler): Don't process internal queue after reading
	from the device. Change some debug options.

2005-08-08  John McCutchan  <ttb@tentacle.dhs.org>

	* server/gam_inotify.c: (gam_inotify_event_new),
	(gam_inotify_process_internal), (gam_inotify_process_event_queue),
	(gam_inotify_init): Fix stupid bug in move pairing code that was slowing 
	things down big time. Make timings #defines, process the event queue @ 30
	Hz. Process the internal event queue @ 30 Hz and when events are read from
	the device fd.

2005-08-08  John McCutchan  <ttb@tentacle.dhs.org>

	* server/gam_inotify.c: (gam_inotify_event_new),
	(gam_inotify_event_pair_with),
	(gam_inotify_event_add_microseconds), (gam_inotify_event_ready),
	(gam_inotify_process_event), (gam_inotify_pair_moves),
	(gam_inotify_process_internal), (gam_inotify_process_event_queue),
	(gam_inotify_read_handler), (gam_inotify_init), (g_timeval_eq):
	Implemented pairing of MOVED_FROM and MOVED_TO events. Waiting for gamin
	to support this event, but it will be trivial to hook up in inotify now.
	* server/local_inotify_syscalls.h: Added ia64 and s390 system call
	numbers. Added a couple aliases for ppc.
	* tests/testing.c: (processCommand): Added "move" command.

Mon Aug  8 23:15:45 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/local_inotify_syscalls.h: applied patch fixing compilation
	  on ppc, alpha and sparc, fixes bug #312934 though incomplete list

2005-08-08  John McCutchan  <ttb@tentacle.dhs.org>

	* server/gam_inotify.c: (gam_inotify_mask_to_gam_file_event),
	(gam_inotify_mask_to_gam_dir_event),
	(gam_inotify_process_event_queue), (gam_inotify_remove_all_for): Add some
	comments and refactor some code.

2005-08-05  John McCutchan  <ttb@tentacle.dhs.org>

	* server/gam_conf.c: (gam_conf_read): Fix build.
	* server/gam_inotify.c: (gam_inotify_process_event_queue),