@@ -1,3 +1,8 @@
+2005-08-09  John McCutchan  <ttb@tentacle.dhs.org>
+
+	* server/gam_node.c: (gam_node_new): Add some debug messages
+	* server/gam_server.c: (gam_add_subscription): Here to
+
 2005-08-08  John McCutchan  <ttb@tentacle.dhs.org>
 
 	* server/gam_inotify.c: (gam_inotify_event_pair_with),
